   + As part of this work, the Export screen has been redesigned. The general and Minecraft-specific settings are now on their own tab named General
 * A setting has been added to the Preferences screen to manually specify the maximum thread count for Export and Merge operations. It is on the Performance tab
   + You can use this to reduce the number of regions Exported or Merged in parallel, to prevent Out Of Memory conditions, or improve performance
   + If an Out Of Memory error occurs, WorldPainter suggests a value to lower this setting to, if it is not already on 1
   + You cannot set the value higher than the number of logical processors (processor cores taking into account hyperthreading etc.) in the system
   + If the org.pepsoft.worldpainter.threads advanced setting is present it overrides this setting. Remove that advanced setting in order to be able to adjust this value in the Preferences
 * Dead bushes can now be planted on grass blocks
 * Bug fix: correct the light levels of the minecraft:light block, and make it insubstantial so that it does not block solid objects
 * Bug fix: prevent an error when rendering very large text with empty lines
 * Various bug fixes and usability improvements

-- Version 2.15.16, released 9-12-2022

 * Allow plants to be placed on mud
 * Bug fix: don't delete or corrupt Custom Biomes when switching between dimensions
 * Bug fix: don't crash when a ceiling dimension has tiles where the surface does no
 * Various bug fixes and usability improvements

-- Version 2.15.15, released 7-12-2022

 * The Custom Layers tab of the Exporting screen now has Enable and Disable buttons to quickly select or deselect all selected layers for Export
 * Bug fix: use correct Custom Biome names when exporting Custom Cave/Tunnel Layers with Floor Dimensions
 * Bug fix: make adding ceiling dimensions to worlds with non-standard build heights work
 * Various bug fixes and usability improvements

-- Version 2.15.14, released 2-12-2022
