@@ -5,6 +5,7 @@
    + The data packs must be .zip files. Extracted data pack directories are not supported
    + The list of data pack files is stored in the .world file, but the contents of the data packs are not. The data packs must be accessible from the original locations whenever the world is Exported, otherwise a warning will be given and the data pack skipped
    + As part of this work, the Export screen has been redesigned. The general and Minecraft-specific settings are now on their own tab named General
+ * The default colour ramp should have ended in purple, but it was actually pink. This has been fixed
  * A setting has been added to the Preferences screen to manually specify the maximum thread count for Export and Merge operations. It is on the Performance tab
    + You can use this to reduce the number of regions Exported or Merged in parallel, to prevent Out Of Memory conditions, or improve performance
    + If an Out Of Memory error occurs, WorldPainter suggests a value to lower this setting to, if it is not already on 1
@@ -13,6 +14,7 @@
  * Dead bushes can now be planted on grass blocks
  * Bug fix: correct the light levels of the minecraft:light block, and make it insubstantial so that it does not block solid objects
  * Bug fix: prevent an error when rendering very large text with empty lines
+ * Bug fix: prevent an error when setting the terrain mode to a colour ramp with a very high default water level
  * Various bug fixes and usability improvements
 
 -- Version 2.15.16, released 9-12-2022
